<resources>
    <string name="app_name">拾记</string>
    <string name="action_settings">设置</string>
    <string name="type_image">表示类型的图片</string>
    <string name="bills_date">日期</string>
    <string name="income_s">收入：</string>
    <string name="expense_s">支出：</string>
    <string name="bill">账单</string>
    <string name="stats">统计</string>
    <string name="discovery">发现</string>
    <string name="title_activity_bill">必记</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start_accounting">当月账单为空\n是否要增加新的账单？</string>
    <string name="current_type">当前类型</string>
    <string name="account">账户</string>
    <string name="recorder">记录人</string>
    <string name="time">时间</string>
    <string name="remark">备注</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="detail_bill">账单明细</string>
    <string name="edit_bill">编辑账单</string>
    <string name="save">保存</string>
    <string name="month_income">月收入</string>
    <string name="month_expense">月支出</string>
    <string name="del_bill">删除帐单</string>
    <string name="date_picker_title">选择日期</string>
    <string name="divide_sign">÷</string>
    <string name="multiply_sign">×</string>
    <string name="clear_sign">C</string>
    <string name="minus_sign">－</string>
    <string name="dot_sign">.</string>
    <string name="equal_sign">＝</string>
    <string name="plus_sign">＋</string>
    <string name="zero">0.00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="journal">流水</string>
    <string name="classify">分类</string>
    <string name="balance">盈余</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="months">月份</string>
    <string name="add_bill">添加账单</string>
    <string name="net_assets">净资产</string>
    <string name="asset_analysis">资产分析</string>
    <string name="liability_s">负债：</string>
    <string name="total_assets_s">总资产：</string>
    <string name="my_account_l">我的账户（</string>
    <string name="my_account_r">）</string>
    <string name="my_transfer">我的转账</string>
    <string name="lend">借出</string>
    <string name="should_receipt">应收款</string>
    <string name="borrow">借入</string>
    <string name="should_repayment">应还款</string>
    <string name="no_stats">暂无统计数据</string>
    <string name="end_date">结束日期</string>
    <string name="start_date">起始日期</string>
    <string name="welcome_screen">欢迎界面</string>
    <string name="account_image">账户图片</string>
    <string name="type_picture">类型图片</string>
    <string name="total_balance">总额</string>
    <string name="set_date">设置日期</string>
    <string name="bill_search">账单查询</string>
    <string name="bill_io">账单导入导出</string>
    <string name="my_setting">我的设置</string>
    <string name="delete_all_bill">删除并重置所有账单</string>
    <string name="setting">设置</string>
    <string name="set_budget">设置预算</string>
    <string name="same_type_percent">同分类中占比</string>
    <string name="same_account_percent">同账户中占比</string>
    <string name="expense_percent">支出占比</string>
    <string name="higher_than_average">高于分类平均值</string>
    <string name="income_percent">收入占比</string>
    <string name="less_than_average">低于分类平均值</string>
    <string name="annual_stats">年度统计</string>
    <string name="day_stats">当日统计</string>
    <string name="monthly_stats">月度统计</string>
    <string name="type_average">分类平均值</string>
    <string name="current_classify">当前分类</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_time_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="list_time_def_value">
        <item>13</item>
        <item>20</item>
    </string-array>

    <string-array name="list_time">
        <item>0:00 - 1:00</item>
        <item>1:00 - 2:00</item>
        <item>2:00 - 3:00</item>
        <item>3:00 - 4:00</item>
        <item>4:00 - 5:00</item>
        <item>5:00 - 6:00</item>
        <item>6:00 - 7:00</item>
        <item>7:00 - 8:00</item>
        <item>8:00 - 9:00</item>
        <item>9:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
        <item>19:00 - 20:00</item>
        <item>20:00 - 21:00</item>
        <item>21:00 - 22:00</item>
        <item>22:00 - 23:00</item>
        <item>23:00 - 0:00</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="enter">开始记账</string>
    <string name="pref_header_about">关于</string>
    <string name="my_borrow">我的借款</string>
    <string name="borrow_hint">应收款</string>
    <string name="lend_hint">应还款</string>
    <string name="author">Made By SkywalkerDarren</string>
    <string name="version">v0.0.0</string>
    <string name="loading">loading...</string>
    <string name="day">天</string>
    <string name="current_currency">当前货币：</string>
    <string name="update_date">更新日期：</string>
    <string name="feedback">意见反馈</string>
    <string name="check_source_code">查看源码</string>
    <string name="about_me">关于我</string>
    <string name="my_repo">我的主页</string>
    <string name="refresh_currency">刷新汇率</string>
</resources>
