<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="1dp"
    android:keyWidth="25%p"
    android:keyHeight="50dp"
    android:verticalGap="1dp">
    <Row>
        <Key
            android:codes="-3"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/clear_sign" />
        <Key
            android:codes="47"
            android:keyLabel="@string/divide_sign" />
        <Key
            android:codes="42"
            android:keyLabel="@string/multiply_sign" />
        <Key
            android:codes="-5"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/ic_backspace_white_18dp" />
    </Row>
    <Row>
        <Key
            android:codes="55"
            android:keyEdgeFlags="left"
            android:keyLabel="7" />
        <Key
            android:codes="56"
            android:keyLabel="8" />
        <Key
            android:codes="57"
            android:keyLabel="9" />
        <Key
            android:codes="45"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/minus_sign" />
    </Row>
    <Row>
        <Key
            android:codes="52"
            android:keyEdgeFlags="left"
            android:keyLabel="4" />
        <Key
            android:codes="53"
            android:keyLabel="5" />
        <Key
            android:codes="54"
            android:keyLabel="6" />
        <Key
            android:codes="43"
            android:keyHeight="101dp"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/plus_sign" />
    </Row>
    <Row>
        <Key
            android:codes="49"
            android:keyEdgeFlags="left"
            android:keyLabel="1" />
        <Key
            android:codes="50"
            android:keyLabel="2" />
        <Key
            android:codes="51"
            android:keyLabel="3" />
        <Key
            android:codes="-99"
            android:keyHeight="0dp"
            android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key
            android:codes="46"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/dot_sign" />
        <Key
            android:codes="48"
            android:keyLabel="0" />
        <Key
            android:codes="-4"
            android:keyWidth="50%p"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/equal_sign" />
    </Row>

</Keyboard>